<resources>
    <string name="app_name">ms_project_android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_record">Please record</string>
    <string name="record_in_progress">Recording</string>
    <string name="record_available">Record</string>


    <string name="info_title">Welcome to Emotion Classification Evaluation</string>
    <string name="info_info">
        In this app we want to evaluate the performance of our speech emotion recognition (SER) model.
        We will ask you to record voice messages in 5 different emotional states: neutral, happy, sad, angry and fearful.
        We provide examples for each emotion to inspire you. But you can also come up with your own ideas.
        Take your time to think about a good story which you can tell in the given emotional state.
        Each recording should be in English and longer than 15 seconds.
        We would also like to ask you to record the messages in a silent environment.
    </string>
    <string name="info_privacy">
        In the end we will ask you to share the results with us for evaluation purposes.
        Your recordings are analyzed on the device (NOT in the cloud)
        and will NOT be part of the shared data.
        The shared data for each recording will consist only out of the intended emotional state and the output of the classifier (which are just predicted probabilities for each emotion).
        If you continue with the next steps you will allow us to automatically analyze you recordings (but the data will not be automatically shared without your consent).
    </string>

    <string name="recognition_headline">Emotion Classification</string>
    <string name="recognition_task_name">Test Run</string>
    <string name="recognition_task">
        <![CDATA[
        <p>This is the test run. It will make you familiar with the app.
        Please speak in <strong>English</strong> and record for around <strong>60 seconds</strong>.</p>
        <br/>
        <p>How to use the App:</p>
        <em>
        <ol>
        <li>Press the button on the bottom right to start the recording</li>
        <li>Press the button again to stop the recording</li>
        <li>Press it again to go to the next task</li>
        </ol>
        </em>
        ]]>
    </string>

    <string name="recognition_emo0_headline">Emotion Classification</string>
    <string name="recognition_emo0_task_name">Neutral Emotion</string>
    <string name="recognition_emo0_task">
        <![CDATA[
        <p>Record a voice message in a neutral state.</p>
        <br/>
        <p>For Example:</p>
        <em>
        <ul>
        <li>Describe your surroundings or the weather in a neutral way.</li>
        </ul>
        </em>
        ]]>
    </string>

    <string name="recognition_emo1_headline">Emotion Classification</string>
    <string name="recognition_emo1_task_name">Happy Emotion</string>
    <string name="recognition_emo1_task">
        <![CDATA[
        <p>Record a voice message in a happy emotion.</p>
        <br/>
        <p>For Example:</p>
        <em>
        <ul>
        <li>Tell some happy or funny stories which happened to you or someone else today or during the week.</li>
        <li>Talk about how you handled a successful project at work or in the university which you are proud of.</li>
        </ul>
        </em>
        ]]>
    </string>

    <string name="recognition_emo2_headline">Emotion Classification</string>
    <string name="recognition_emo2_task_name">Sad Emotion</string>
    <string name="recognition_emo2_task">
        <![CDATA[
        <p>Record a voice message about something which makes you really sad.</p>
        <br/>
        <p>For Example:</p>
        <em>
        <ul>
        <li>Tell a sad story which happened to you or someone else today or during the week.</li>
        <li>Talk about something which you regret doing or not doing.</li>
        </ul>
        </em>
        ]]>
    </string>

    <string name="recognition_emo3_headline">Emotion Classification</string>
    <string name="recognition_emo3_task_name">Angry Emotion</string>
    <string name="recognition_emo3_task">
        <![CDATA[
        <p>Record a voice message where you complain about something which makes you really angry.</p>
        <br/>
        <p>For Example:</p>
        <em>
        <ul>
        <li>The wrong behaviour of a stranger or one of your friends.</li>
        <li>How your boss or your professors requesting you to do much more work, ignoring the fact that you also have other things to do.</li>
        <li>Your imaginary flatmate Jerry which did AGAIN “forgot” to clean the dishes.</li>
        </ul>
        </em>
        ]]>
    </string>

    <string name="recognition_emo4_headline">Emotion Classification</string>
    <string name="recognition_emo4_task_name">Fearful Emotion</string>
    <string name="recognition_emo4_task">
        <![CDATA[
        <p>Talk about a creepy experience or something which scared you.</p>
        <br/>
        <p>For Example:</p>
        <em>
        <ul>
        <li>A creepy person which followed you on you way home.</li>
        <li>A mad or insane person you had contact with or heard about.</li>
        </ul>
        </em>
        ]]>
    </string>

    <string name="share_headline">Share your Results</string>
    <string name="share_info">
        Thank you for helping us to evaluate our project work!\n\n
        We kindly ask you to share you results now with us.\n
        As mentioned in the beginning, only the statistics will be shared with us and not your audio recordings.\n\n

        We would also like to kindly ask you to select your gender and age group as this will help us with identifying any potential problems with the model, but note that you do not have to check anything if you are not comfortable with sharing this information.\n\n
    </string>

</resources>