<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".fragment.InfoFragment">

    <TextView
        style="@style/headline"
        android:text="@string/info_title" />

    <TextView
        style="@style/title"
        android:text="About"/>

    <TextView
        style="@style/text"
        android:text="@string/info_info" />

    <TextView
        style="@style/title"
        android:text="Privacy" />

    <TextView
        style="@style/text"
        android:text="@string/info_privacy" />

    <Button
        android:id="@+id/btn_next"
        style="@style/button"
        android:text="Next"/>

</LinearLayout>